# kraken

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  GLASSWING-PLAN.md  GOVERNANCE.md  LICENSE  LOGROS-ABRIL-2026.html  LOGROS-ABRIL-2026.md  MAINTAINERS.md  MYTHOS5-PLAN.md  PARITY.md  PHILOSOPHY.md  README.en.md  README.es.md  README.md  ROADMAP-100.md  ROADMAP-2027.md  ROADMAP-2030.md  ROADMAP-2079.md  ROADMAP-ENTERPRISE.md  ROADMAP-RUST-ONLY.md  ROADMAP-V4.md  ROADMAP-VENEZUELA.md  ROADMAP.md  SECURITY.md  SUPPLY-CHAIN.md  USAGE.md  audit.toml  dashboard.html  deny.toml  install.sh  prd.json  progress.txt
.github/: dependabot.yml  (+1 more)
rust/: CLAUDE.md  Cargo.toml  MOCK_PARITY_HARNESS.md  PARITY.md  README.es.md  README.md  USAGE.md
rust/.krakend-agents/: agent-1781101463422125263.json  agent-1781101463422125263.md  agent-1781101465407338957.json  agent-1781101465407338957.md  agent-1781101465480894061.json  agent-1781101465480894061.md  agent-1781101465522762544.json  agent-1781101465522762544.md  agent-1781101465565082193.json  agent-1781101465565082193.md  agent-1781101465597637148.json  agent-1781101465597637148.md  agent-1781101465626661139.json  agent-1781101465626661139.md  agent-1781101465656515753.json  agent-1781101465656515753.md  agent-1781101465686872468.json  agent-1781101465686872468.md  agent-1781101465717050681.json  agent-1781101465717050681.md  agent-1781101465748170394.json  agent-1781101465748170394.md  agent-1781101465777892484.json  agent-1781101465777892484.md  agent-1781101515672136854.json  agent-1781101515672136854.md  agent-1781101515730965180.json  agent-1781101515730965180.md  agent-1781101515785192288.json  agent-1781101515785192288.md  agent-1781101515838254778.json  agent-1781101515838254778.md  agent-1781101515887298250.json  agent-1781101515887298250.md  agent-1781101515938196942.json  agent-1781101515938196942.md  agent-1781101515986726404.json  agent-1781101515986726404.md  agent-1781101516042037627.json  agent-1781101516042037627.md  (+248 more)
rust/crates/aicampaign/: Cargo.toml
rust/crates/aicampaign/src/: adaptive.rs  auto_exploit.rs  coordinator.rs  learning.rs  lib.rs  overnight.rs  planner.rs  prioritization.rs  replay.rs
rust/crates/anonymity/: Cargo.toml
rust/crates/anonymity/src/: anonsurf.rs  dns_leak.rs  ip_leak.rs  lib.rs  mac.rs  metadata.rs  onionshare.rs  route.rs  socks5.rs  tor.rs
rust/crates/api/: Cargo.toml
rust/crates/api/src/: client.rs  lib.rs  types.rs
rust/crates/api/tests/: api_comprehensive.rs  api_unit_tests.rs  client_integration.rs  proptest_api.rs
rust/crates/c2/: Cargo.toml
rust/crates/c2/src/: beacon_dns.rs  beacon_http.rs  beacon_smb.rs  beacon_ws.rs  c2crypto.rs  error.rs  kill.rs  lib.rs  malleable.rs  payload.rs  proxy.rs  session.rs  task.rs
rust/crates/cache/: Cargo.toml
rust/crates/cache/src/: error.rs  lib.rs
rust/crates/cache/tests/: cache_comprehensive.rs  cache_unit_tests.rs
rust/crates/cloudsec/: Cargo.toml
rust/crates/cloudsec/src/: aws_ec2.rs  aws_iam.rs  aws_s3.rs  azure.rs  docker.rs  gcp.rs  k8s.rs  kube_bench.rs  lib.rs  metadata.rs
rust/crates/commands/src/: lib.rs
rust/crates/compat-harness/src/: lib.rs
rust/crates/enterprise/: Cargo.toml
rust/crates/enterprise/src/: circuit_breaker.rs  enterprise_features.rs  graceful_degradation.rs  health.rs  lib.rs  logging.rs  metrics.rs  performance.rs  retry.rs  tracing.rs
rust/crates/forensics/: Cargo.toml
rust/crates/forensics/src/: browser.rs  carving.rs  email.rs  imaging.rs  lib.rs  memory.rs  metadata.rs  network.rs  pdf.rs  registry.rs  timeline.rs
rust/crates/forensics/tests/: forensics_comprehensive.rs
rust/crates/hardware/: Cargo.toml
rust/crates/hardware/src/: credentials.rs  diff.rs  entropy.rs  firmware.rs  flash.rs  gpio.rs  iot_fuzz.rs  jtag.rs  lib.rs  llm_audit.rs  sdr.rs  uart.rs
rust/crates/kraken-config/: Cargo.toml
rust/crates/kraken-config/src/: config.rs  lib.rs
rust/crates/kraken-conversation/: Cargo.toml
rust/crates/kraken-conversation/src/: conversation.rs  lib.rs
rust/crates/kraken-errors/: Cargo.toml
rust/crates/kraken-errors/src/: lib.rs
rust/crates/kraken-events/: Cargo.toml
rust/crates/kraken-events/src/: lane_events.rs  lib.rs  task_packet.rs  task_registry.rs
rust/crates/kraken-git/: Cargo.toml
rust/crates/kraken-git/src/: git_context.rs  lib.rs
rust/crates/kraken-infra/: Cargo.toml
rust/crates/kraken-infra/src/: file_ops.rs  fingerprint.rs  forensic.rs  health_probe.rs  lib.rs  sanitizer.rs  size_budget.rs
rust/crates/kraken-mcp/: Cargo.toml
rust/crates/kraken-mcp/src/: lib.rs  mcp.rs  mcp_client.rs  mcp_stdio.rs  mcp_tool_bridge.rs  oauth.rs
rust/crates/kraken-policy/: Cargo.toml
rust/crates/kraken-policy/src/: lib.rs  permission_enforcer.rs  permissions.rs
rust/crates/kraken-session/: Cargo.toml
rust/crates/kraken-session/src/: compact.rs  hooks.rs  lib.rs  prompt.rs  session.rs  session_control.rs
rust/crates/localmodels/: Cargo.toml
rust/crates/localmodels/benches/: kraken_bench.rs
rust/crates/localmodels/src/: classifier.rs  ensemble.rs  features.rs  lib.rs  model.rs  online_learning.rs  sequence.rs
rust/crates/mobile/: Cargo.toml
rust/crates/network/: Cargo.toml
rust/crates/offline/: Cargo.toml
rust/crates/optimization/: Cargo.toml
rust/crates/osint/: Cargo.toml
rust/crates/password/: Cargo.toml
rust/crates/postexploit/: Cargo.toml
rust/crates/reporting/: Cargo.toml
rust/crates/reverse/: Cargo.toml
rust/crates/runtime/: Cargo.toml
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/sandbox/: Cargo.toml
rust/crates/security/: Cargo.toml
rust/crates/sniffer/: Cargo.toml
rust/crates/socialeng/: Cargo.toml
rust/crates/stress/: Cargo.toml
rust/crates/supplychain/: Cargo.toml
rust/crates/tools/: Cargo.toml
rust/crates/vulnscan/: Cargo.toml  README.md
rust/crates/wireless/: Cargo.toml
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: fuzz_bash_validation.rs  fuzz_feature_extraction.rs  fuzz_json_config.rs  fuzz_path_traversal.rs  fuzz_sanitizer.rs
rust/scripts/: wrapper.sh
(+282 files in other folders)
