[workspace]
members = [
  "crates/*",
  "crates/security",
  "crates/enterprise",
  "crates/localmodels",
  "crates/offline",
  "crates/cache",
  "crates/osint",
  "crates/cloudsec",
  "crates/hardware",
  "crates/mobile",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
serde = "1"
serde_json = "1"
rand = "0.8"
thiserror = "2"

[profile.release]
lto = "fat"
strip = "symbols"
panic = "abort"
codegen-units = 1
opt-level = "z"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
