[package]
name = "aicampaign"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
log = "0.4"
chrono = { version = "0.4", features = ["serde", "clock"] }
rand = "0.8"
