[package]
name = "cache"
version = "0.1.0"
edition = "2021"
authors = ["Claw Code Venezuela"]
description = "Cache multi-nivel para Venezuela - reduce uso de API"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
thiserror = "2"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"