[package]
name = "cache"
version.workspace = true
edition = "2021"
authors = ["Kraken Contributors"]
description = "Cache multi-nivel para Venezuela - reduce uso de API"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
thiserror = { workspace = true }
sha2 = "0.10"
lru = "0.18"

[dev-dependencies]
tempfile = "3.8"