[package]
name = "enterprise"
version = "0.1.0"
edition = "2021"
authors = ["Claw Code Venezuela"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"