[package]
name = "enterprise"
version.workspace = true
edition = "2021"
authors = ["Kraken Contributors"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"