[package]
name = "forensics"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
hex = "0.4"
log = "0.4"
chrono = { version = "0.4", features = ["serde", "clock", "oldtime"] }
regex = "1"
walkdir = "2"
nom = "7"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
