[package]
name = "kraken-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
kraken-infra = { path = "../kraken-infra" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
glob = "0.3"

[lints]
workspace = true
