[package]
name = "kraken-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
kraken-config = { path = "../kraken-config" }
security = { path = "../security" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
