[package]
name = "kraken-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
kraken-config = { path = "../kraken-config" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
