[package]
name = "kraken-session"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
kraken-config = { path = "../kraken-config" }
kraken-git = { path = "../kraken-git" }
kraken-policy = { path = "../kraken-policy" }
security = { path = "../security" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
