[package]
name = "localmodels"
version = "0.2.0"
edition = "2021"
authors = ["Claw Code Venezuela"]
description = "ML Local Threat Detection — Classifier, Sequence Analysis, Ensemble Scoring"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[features]
default = ["classifier", "sequence"]
classifier = []
sequence = []
ensemble = []
online-learning = []

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kraken_bench"
harness = false
