[package]
name = "localmodels"
version.workspace = true
edition = "2021"
authors = ["Kraken Contributors"]
description = "ML Local Threat Detection — Classifier, Sequence Analysis, Ensemble Scoring"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["classifier", "sequence"]
classifier = []
sequence = []
ensemble = []
online-learning = []

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kraken_bench"
harness = false
