[package]
name = "network"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rand.workspace = true
socket2 = "0.6"
hickory-resolver = "0.26"
hickory-proto = "0.26"
regex = "1"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
log = "0.4"
scraper = "0.22"
