[package]
name = "offline"
version.workspace = true
edition = "2021"
authors = ["Kraken Contributors"]
description = "Sistema offline-first para Venezuela"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
network = ["reqwest"]