[package]
name = "osint"
version.workspace = true
edition = "2021"
license = "MIT"
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
regex = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
scraper = "0.22"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
hickory-resolver = { version = "0.26", features = ["tokio"] }
tokio = { version = "1", features = ["rt", "sync", "time", "net"] }
sha2 = "0.10"
rand = { workspace = true }
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[features]
default = []
network-tests = []
