[package]
name = "password"
version.workspace = true
edition = "2021"
authors = ["Kraken Contributors"]

[dependencies]
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
bcrypt = "0.17"
argon2 = { version = "0.5", features = ["password-hash"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
password-hash = "0.5"
csv = "1.3"
scraper = "0.22"

[features]
ssh = ["ssh2"]
default = []

[target.'cfg(unix)'.dependencies]
ssh2 = { version = "0.9", optional = true }

[dev-dependencies]
