[package]
name = "reporting"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
log = "0.4"
chrono = { version = "0.4", features = ["serde", "clock"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "rt-multi-thread"] }
