[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
kraken-infra = { path = "../kraken-infra" }
kraken-git = { path = "../kraken-git" }
kraken-events = { path = "../kraken-events" }
kraken-config = { path = "../kraken-config" }
kraken-policy = { path = "../kraken-policy" }
kraken-mcp = { path = "../kraken-mcp" }
kraken-session = { path = "../kraken-session" }
kraken-conversation = { path = "../kraken-conversation" }
security = { path = "../security" }
log = "0.4"
sha2 = "0.10"
glob = "0.3"
plugins = { path = "../plugins" }
regex = "1"
serde = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["std"] }
serde_json.workspace = true
telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
walkdir = "2"

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
