[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"
authors = ["Claw Code Venezuela"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Security"] }

[features]
default = []
seccomp = []
wasmer = []