[package]
name = "sandbox"
version = "0.2.0"
edition = "2021"
authors = ["Claw Code Venezuela"]

[dependencies]
log = "0.4"
libc = "0.2"
nix = { version = "0.28", features = ["resource", "sched", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Security"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[features]
default = ["seccomp", "landlock"]
seccomp = []
landlock = []
wasmer = []
sandbox-macos = []
