[package]
name = "security"
version = "0.1.0"
edition = "2021"
authors = ["Claw Code Venezuela"]

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"