[package]
name = "security"
version.workspace = true
edition = "2021"
authors = ["Kraken Contributors"]

[dependencies]
# AEAD Ciphers
aes-gcm = "0.10"
chacha20poly1305 = { version = "0.10", features = ["std"] }

# Key Derivation
argon2 = { version = "0.5", features = ["password-hash"] }
hkdf = "0.12"
sha2 = "0.10"

# Digital Signatures
ed25519-dalek = { version = "2", features = ["std"] }

# Security
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.6"

# Utilities
rand = "0.8"
base64 = "0.22"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
password-hash = "0.5"
regex = "1.0"

# OS-level memory hardening
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"