[package]
name = "socialeng"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest = { version = "0.12", features = ["blocking"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
chrono = { version = "0.4", features = ["serde", "clock"] }
base64 = "0.22"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
regex = "1"
