[package]
name = "supplychain"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
hex = "0.4"
log = "0.4"
regex = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
rand = "0.8"
