[package]
name = "vulnscan"
version.workspace = true
edition = "2021"
license = "MIT"
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
walkdir = "2"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.22"
tree-sitter-rust = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-swift = "0.7"
termcolor = "1.4"
runtime = { path = "../runtime" }
security = { path = "../security" }
localmodels = { path = "../localmodels" }
api = { path = "../api" }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
sha3 = "0.10"

[dev-dependencies]
tempfile = "3"
