[package]
name = "wireless"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
regex = "1"
chrono = "0.4"
rand.workspace = true
hex = "0.4"
sha2 = "0.10"
log = "0.4"
